# nolead

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  python-tests.yml
docs/: parallel_tasks.md  parallel_tasks_example.md
examples/: complex_pipeline.py  parallel_tasks_example.py  param_visualization_example.py  parameter_example.py  simple_pipeline.py  visualization_example.py
nolead/: __init__.py  core.py  logging.py  visualization.py
tests/: test_core.py  test_parallel.py  test_parameters.py
