[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nolead"
version = "0.2.0"
description = "A lightweight pipeline orchestration library inspired by Luigi"
authors = [{ name = "Rui Vieira", email = "ruidevieira@googlemail.com" }]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ruivieira/nolead"
"Bug Tracker" = "https://github.com/ruivieira/nolead/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py38"
line-length = 88
exclude = [
    ".git",
    ".pytype",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "ARG", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
disallow_any_generics = false
no_implicit_optional = true
strict_optional = true
